<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">




    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/button_margin"
        android:fontFamily="@font/roboto_extra_bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/image_logo"
        android:text="@string/are_you_ready_for_bmi_test"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large_size"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:background="@drawable/shape_two"
        android:fontFamily="@font/roboto_extra_bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:padding="@dimen/padding"
        android:text="@string/yes_i_am_ready"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:background="@drawable/shape_two"
        android:fontFamily="@font/roboto_extra_bold"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/no_thanks"
        android:textColor="@color/black"
        android:textSize="@dimen/text_large_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_ready" />


</androidx.constraintlayout.widget.ConstraintLayout>